2007-04-13  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Version 1.3.12 released.
	* configure.ac (AC_INIT): Likewise.

	* README: Update year in copyright notice.
	* m4/shell.m4: Add copyright notice.

	* bootstrap (gnulib_tool_option_extras): Put this back; it was
	inadvertently omitted from gnulib.
	(gnulib_tool_option): Use it.
	* .cvsignore: Add *._bootmp*.
	* lib/.cvsignore: Add stdlib.h, stdlib_.h, time.h, time_.h, unistd.h.
	Remove alloca.c, alloca.h, alloca_.h, exit.h, getdelim.c, getdelim.h,
	getline.c, getline.h, malloc.c, mbchar.c, mbchar.h, mbuiter.h, memchr.c,
	regcomp.c, regex.c, regex.h, regex_internal.c, regex_internal.h,
	regexec.c, rpmatch.c, stdint.h, stdint_.h, strcase.h, strcasecmp.c,
	strncasecmp.c, strnlen1.c, strnlen1.h, timespec.h, wcwidth.h.
	* m4/.cvsignore: Add stdlib_h.m4, time_h.m4.
	Remove alloca.m4, codeset.m4, getdelim.m4, getline.m4,
	longlong.m4, mbchar.m4, mbiter.m4, mbrtowc.m4, memchr.m4, regex.m4,
	rpmatch.m4, ssize_t.m4, stdint.m4 strcase.m4, timespec.m4, ulonglong.m4,
	wchar_t.m4, wcwidth.m4, wint_t.m4.

2007-03-29  Paul Eggert  <eggert@cs.ucla.edu>  (tiny change)

	* znew.in (tmp): Use $TMPDIR as temp directory, if given.
	Suggested by Juan Manuel Guerrero.

2007-03-19  Paul Eggert  <eggert@cs.ucla.edu>

	* README-hacking: New file, renamed from README-cvs.
	* README-cvs: Remove.
	* bootstrap: Sync from today's gnulib.
	* bootstrap.conf (gnulib_modules): Add 'time'.
	* gzip.c: Don't include timespec.h; 'time' fixes time.h for that.
	* zip.c: Likewise.
	* gzip.c: Don't include time.h or sys/time.h; gzip.h now includes
	time.h, which is now enough.
	* gzip.h: Include <time.h>.

2007-03-14  Paul Eggert  <eggert@cs.ucla.edu>

	* README (WARNING): Reword to avoid mention of no-longer-existing
	section in INSTALL file.  Problem reported by Paul Townsend in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-03/msg00000.html>.

2007-02-11  Paul Eggert  <eggert@cs.ucla.edu>
