@@ -1,3 +1,10 @@
+2007-04-28  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* m4/shell.m4 (AC_PROG_SHELL): Check for old-fashioned shells that
+	don't allow "(" in front of case labels.  Problem reported by midair
+	in <http://lists.gnu.org/archive/html/bug-gzip/2007-04/msg00004.html>.
+	Also, check for buggy shells that require ";;" before "esac".
+
 2007-04-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* NEWS: Version 1.3.12 released.
